# sol-crashers-on-chain

./: Anchor.toml  README.md  package-lock.json  package.json
programs/sol-crashers-on-chain/: Cargo.toml
programs/sol-crashers-on-chain/src/: error.rs  lib.rs
programs/sol-crashers-on-chain/src/instructions/: burn_gems.rs  burn_gold.rs  initialize.rs  mod.rs  print_gems.rs  print_gold.rs
programs/sol-crashers-on-chain/src/state/: currency.rs
tests/: sol-crashers-on-chain.ts
