[package]
name = "sol-crashers-on-chain"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sol_crashers_on_chain"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"]}
solana-program = "=1.18.2"
ahash = "^0.8.7"
anchor-spl = "0.29.0"

[dev-dependencies]
solana-program-test = "=1.18.2"
solana-sdk = "=1.18.2"